# Libreria_Analytics

./: Dockerfile  LICENSE  NOTICE  README.md  cookiecutter.json  copier.yml  pyproject.toml  requirements.txt
.github/workflows/: actions_workflow_demo.yml
templates/fastapi/: .gitignore  copier.yml
templates/project-pytest/: copier.yml  pyproject.toml  requirements.txt
templates/project-pytest/.github/workflows/: github-actions-pytest-docker.yml
templates/tools-docker/: Dockerfile  docker-compose.yaml
